# IntegralImage

./: CMakeLists.txt  README.md
doxyfile/: Doxyfile  mainpage.md
gtests/: argparser.cc  integralimage.cc  main.cc
src/: argparser.cpp  argparser.h  integralimage.cpp  integralimage.h  main.cpp
